# hope-dedup-engine

./: .bumpversion.cfg  .dockerignore  .env.example  .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  DESIGN.md  Dockerfile  README.md  SECURITY.md  STORAGES.md  bandit.yaml  compose.prd.yml  compose.test.yml  compose.yml  entrypoint.sh  manage.py  pyproject.toml  pytest.ini  tox.ini
.github/: .gitignore  file-filters.yml
.github/actions/build_args/: action.yml
.github/actions/build_labels/: action.yml
.github/actions/distro_hash/: action.yml
.github/actions/docker_build/: action.yml
.github/actions/docker_info/: action.yml
.github/actions/env/: action.yml
.github/actions/hash/: action.yml
.github/actions/image_exists/: action.yml
.github/actions/image_meta/: action.yml
.github/actions/image_updated/: action.yml
.github/actions/last_commit/: action.yml
.github/actions/version/: action.xyml  action.yml
.github/codeql/: codeql-config.yml
.github/workflows/: _build.yml  add-reviewer.yml  assign_to_project.yml  ci.yml  debug.yml  delete_image.yml  documentation.yml  dump.yml  label-pullrequest.yml  lint.yml  mypy.yml  rc.ym_  security.yml  test.ym_  test.yml  towncrier.yml
changes/: 1234.bugfix  aaaa.misc
docker/: Dockerfile  Makefile  entrypoint.sh
docker/conf/: circus.conf  mime.types  uwsgi.ini
docs/: _config.yml  compose.yml  index.md
docs/handbook/: API-Documentation.md  deduplication.md  demo.md  storages.md
docs/local/: Dockerfile  compose.yml
history/: 8765.removal.txt
ops/: ci.yaml  compose.ci-test.yml  compose.test.yml
src/hope_dedup_engine/: __init__.py  celery.py  state.py
src/hope_dedup_engine/api/: apps.py  urls.py
src/hope_dedup_engine/apps/api/: admin.py  apps.py  auth.py  celery_tasks.py  const.py  serializers.py  signals.py  urls.py  utils.py  views.py
src/hope_dedup_engine/apps/api/admin/: __init__.py  config.py  deduplicationset.py  duplicate.py  hdetoken.py  image.py
src/hope_dedup_engine/apps/api/deduplication/: adapters.py  lock.py  process.py  registry.py
src/hope_dedup_engine/apps/api/migrations/: 0001_initial.py  0002_remove_duplicate_first_filename_and_more.py  0003_remove_deduplicationset_error_and_more.py  0003_remove_deduplicationset_name.py  0004_config_deduplicationset_config.py  0004_remove_deduplicationset_error_and_more.py  0005_config_deduplicationset_config.py  0006_alter_deduplicationset_state_and_more.py  0007_rename_ignoredkeypair_ignoredreferencepkpair_and_more.py  0008_ignoredfilenamepair.py
src/hope_dedup_engine/apps/api/models/: __init__.py  (+2 more)
src/hope_dedup_engine/apps/core/: admin.py  apps.py  checks.py  dbrouters.py  exceptions.py  models.py  storage.py
src/hope_dedup_engine/apps/facerecognize/: models.py  serializers.py  tasks.py  utils.py  views.py
src/hope_dedup_engine/apps/faces/: admin.py  apps.py  celery_tasks.py  exceptions.py  forms.py  models.py  validators.py
src/hope_dedup_engine/apps/public_api/: apps.py  auth.py  models.py  serializers.py  urls.py  utils.py  views.py
src/hope_dedup_engine/apps/security/: admin.py  apps.py  backends.py  constants.py  models.py
src/hope_dedup_engine/apps/social/: pipeline.py  strategy.py
src/hope_dedup_engine/config/: __init__.py  celery.py  settings.py  urls.py  wsgi.py
src/hope_dedup_engine/config/fragments/: celery.py  constance.py  csp.py  customs.py  databases.py  debug_toolbar.py  drf.py  drf_spectacular.py  email.py  i18n.py  installed_apps.py  jwt.py  loggers.py  middleware.py  recognition.py  redis.py  rest_framework.py  root.py  sentry.py  smart_admin.py  social_auth.py  spectacular.py  storages.py  templates.py
src/hope_dedup_engine/utils/: flags.py  http.py  security.py
src/hope_dedup_engine/web/: urls.py  views.py
src/hope_dedup_engine/web/templates/: 403.html  404.html  500.html  _header.html
tests/: .coveragerc  conftest.py  factories.py  test_celery.py  test_command_demo.py  test_command_dnnsetup.py  test_command_worker.py  test_commands.py  test_smartenv.py  test_state.py  test_storage.py  test_wsgi.py
tests/admin/: test_admin_smoke.py
tests/api/: api_const.py  conftest.py  const.py  test_adapters.py  test_auth.py  test_business_logic.py  test_create_deduplication_set.py  test_deduplication_set_create.py  test_deduplication_set_delete.py  test_deduplication_set_list.py  test_deduplication_set_lock.py  test_deduplication_set_process.py  test_deduplication_set_retrieve.py  test_delete_deduplication_set.py  test_duplicate_list.py  test_find_duplicates.py  test_finder_registry.py  test_ignored_filename_create.py  test_ignored_filename_list.py  test_ignored_keys_create.py  test_ignored_keys_list.py  test_ignored_reference_pk_create.py  test_ignored_reference_pk_list.py  test_image_bulk_create.py  test_image_bulk_delete.py  test_image_create.py  test_image_delete.py  test_image_list.py  test_list_deduplication_set.py  test_utils.py
tests/core/: test_models.py
tests/extras/demoapp/: compose.yml
tests/extras/demoapp/scripts/: .common  .vars  README.md  all_ignored_case  base_case  create_deduplication_set  create_image  ignore  process_deduplication_set  show_deduplication_set  show_duplicates  use_auth_token  use_base_url  use_deduplication_set
tests/extras/testutils/: decorators.py  duplicate_finders.py  perms.py
tests/extras/testutils/factories/: __init__.py  api.py  base.py  django_celery_beat.py  log.py  social.py  system.py  user.py  userrole.py
tests/faces/: conftest.py  const.py  faces_const.py  fixtures.py  test_celery_tasks.py  test_downloader.py  test_duplicate_groups_builder.py  test_duplication_detector.py  test_file_sync.py  test_file_sync_manager.py  test_forms.py  test_image_processor.py  test_net_manager.py  test_storage_manager.py  test_tasks.py  test_validators.py
tests/faces/fixtures/: celery_tasks.py  duplication_detector.py  tasks.py
tests/social/: conftest.py  test_social_pipeline.py
tests/utils/: test_utils_flags.py  test_utils_http.py  test_utils_security.py  test_utils_useragent.py
tests/web/: test_web_views.py
(+38 files in other folders)
