[project]
name = "hope_dedup_engine"
version = "0.1.0"
description = "HOPE Deduplication Engine (HDE)"
readme = "README.md"
authors = [
    {name = "ddinicola"},
    {name = "Domenico DiNicola", email = "dom.dinicola@gmail.com"},
]
requires-python = ">=3.12"
dependencies = [
    "Django",
    "celery[redis]",
    "django-admin-extra-buttons",
    "django-admin-sync",
    "django-adminactions",
    "django-adminfilters",
    "django-celery-beat",
    "django-concurrency",
    "django-constance",
    "django-csp",
    "django-debug-toolbar",
    "django-environ>=0.11.2",
    "django-extensions",
    "django-filter",
    "django-import-export",
    "django-regex>=0.5.0",
    "django-storages[azure]",
    "djangorestframework",
    "drf-spectacular[sidecar]",
    "gunicorn",
    "psycopg2-binary>=2.9.9",
    "sentry-sdk",
    "social-auth-app-django",
    "social-auth-core",
    "unicef-security",
    "django-flags>=5.0.13",
    "django-reversion>=5.0.12",
    "uwsgi>=2.0.25.1",
    "drf-nested-routers>=0.94.1",
    "face-recognition==1.3.0",
    "opencv-python>=4.9.0.80",
]

[tool.pdm.build]
includes = []

[tool.pdm.dev-dependencies]
dev = [
    "black",
    "django-webtest",
    "factory-boy",
    "faker",
    "flake8",
    "flake8-bugbear",
    "flake8-formatter-junit-xml",
    "flake8-html",
    "freezegun",
    "graphene-stubs",
    "ipdb",
    "isort",
    "mypy",
    "openpyxl-stubs",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-django",
    "pytest-echo",
    "pytest-xdist",
    "requests-mock",
    "responses>=0.25.0",
    "types-freezegun",
    "types-python-dateutil",
    "types-pytz",
    "types-redis",
    "types-requests",
    "unittest-xml-reporting",
    "watchdog",
    "pytest-factoryboy>=2.7.0",
    "pytest-mock>=3.14.0",
]
[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.pytest_cache
  | \.tox
  | \.venv
  | ~build
  | build
  | ops
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 120
default_section = "THIRDPARTY"
known_first_party = []
known_django = "django"
sections = ["FUTURE","STDLIB","DJANGO","THIRDPARTY","FIRSTPARTY","LOCALFOLDER"]
include_trailing_comma = true
skip = ["migrations", "snapshots", ".venv"]


[tool.django-stubs]
django_settings_module = "hope_dedup_engine.config.settings"

[tool.pdm.scripts]
coverage = "pytest tests/ --cov -n auto --create-db -c pytest.ini"
