[project]
name = "hope_dedup_engine"
version = "0.1.0"
description = "HOPE Deduplication Engine (HDE)"
readme = "README.md"
authors = [
    {name = "ddinicola"},
    {name = "Domenico DiNicola", email = "dom.dinicola@gmail.com"},
]
requires-python = ">=3.12"

dependencies = [
    "Django",
    "celery[redis]",
    "django-admin-extra-buttons",
    "django-adminactions",
    "django-adminfilters",
    "django-celery-beat",
    "django-concurrency",
    "django-constance",
    "django-csp",
    "django-debug-toolbar",
    "django-environ>=0.11.2",
    "django-extensions",
    "django-filter",
    "django-flags>=5.0.13",
    "django-regex>=0.5.0",
    "django-storages[azure]",
    "djangorestframework",
    "drf-nested-routers>=0.94.1",
    "drf-spectacular[sidecar]",
    "face-recognition>=1.3.0",
    "opencv-python>=4.9.0.80",
    "psycopg2-binary>=2.9.9",
    "sentry-sdk[celery,django]>=2.2.1",
    "social-auth-app-django",
    "social-auth-core",
    "unicef-security",
    "uwsgi>=2.0.25.1",
    "drf-nested-routers>=0.94.1",
    "face-recognition>=1.3.0",
    "opencv-python>=4.9.0.80",
    "django-celery-results>=2.5.1",
    "requests>=2.32.3",
]


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
includes = ['src/hope_dedup_engine/web/templates']

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "black",
    "django-webtest",
    "factory-boy",
    "faker",
    "flake8",
    "flake8-bugbear",
    "flake8-formatter-junit-xml",
    "flake8-html",
    "freezegun",
    "graphene-stubs",
    "ipdb",
    "isort",
    "mypy",
    "openpyxl-stubs",
    "pre-commit",
    "pytest",
    "pytest-celery>=1.0.0",
    "pytest-cov",
    "pytest-django",
    "pytest-echo",
    "pytest-factoryboy>=2.7.0",
    "pytest-mock>=3.14.0",
    "pytest-xdist",
    "requests-mock",
    "responses>=0.25.0",
    "types-freezegun",
    "types-python-dateutil",
    "types-pytz",
    "types-redis",
    "types-requests",
    "unittest-xml-reporting",
    "watchdog",
]
[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.pytest_cache
  | \.tox
  | \.venv
  | ~build
  | build
  | ops
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 88
default_section = "THIRDPARTY"
known_first_party = []
known_django = "django"
sections = ["FUTURE","STDLIB","DJANGO","THIRDPARTY","FIRSTPARTY","LOCALFOLDER"]
include_trailing_comma = true
skip = ["migrations", "snapshots", ".venv"]


[tool.django-stubs]
django_settings_module = "hope_dedup_engine.config.settings"

[tool.pdm.scripts]
coverage = "pytest tests/ --cov -n auto --create-db -c pytest.ini"
act = "act"

[tool.towncrier]
name = "Deduplication Engine"
directory = "changes"
package = "hope_dedup_engine"
filename = "CHANGELOG.md"
title_format = "{version}"
#template =
#issue_format = "`#{issue} <https://github.com/unicef/hope-dedup-engine/pull/{issue}>`_"
wrap = true
